k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: intranet
  labels:
    name: intranet
    app.kubernetes.io/part-of: intranet-portal
