k8s/07-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: intranet-app
  namespace: intranet
  labels:
    app: intranet-app
    app.kubernetes.io/part-of: omniflowti
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: intranet-app
  template:
    metadata:
      labels:
        app: intranet-app
        app.kubernetes.io/part-of: omniflowti
    spec:
      containers:
        - name: flowti-app
          image: flowti-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /index.html
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /index.html
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 5
