k8s/08-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: intranet-service
  namespace: intranet
  labels:
    app: intranet-app
    app.kubernetes.io/part-of: intranet-portal
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: intranet-app
