k8s/09-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: intranet-ingress
  namespace: intranet
  labels:
    app: intranet-app
    app.kubernetes.io/part-of: omniflowti
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "64m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "INGRESSCOOKIE"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
    nginx.ingress.kubernetes.io/session-cookie-path: "/"
spec:
  ingressClassName: nginx
  rules:
    - host: intranet.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: intranet-service
                port:
                  number: 80
    - host: portalvem.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: intranet-service
                port:
                  number: 80
    - host: guardian.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pipeline-guardian-service
                port:
                  number: 9090
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: intranet-service
                port:
                  number: 80
